survey reference, migrate type other minor changes
